basics/Ingress/k8-nginx-ingress/basic_host_based_routing/pod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-world
  labels:
    app: nginx-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello-world
  template:
    metadata:
      labels:
        app: nginx-hello-world
    spec:
      containers:
      - name: nginx-hello-world
        image: nginxdemos/hello
        ports:
        # The ports to expose from the pods
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "100Mi"
            cpu: "0.2"
      restartPolicy: Always
