basics/Ingress/k8-nginx-ingress/basic_host_based_routing/pod_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world-svc
spec:
  selector:
    app: nginx-hello-world
  ports:
    # Inside the cluster, what port does the service expose?
    # I want to keep high traffic ports like 80 free
  - protocol: TCP
    # This is what the service exposes (what needs to get passed onto the ingress)
    port: 8080
    # The ports on the targeted app
    targetPort: 80
  type: ClusterIP
